# cloudfree

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix  wrangler.toml
scripts/: deploy.sh  dev.sh  test-mcp.sh  test-worker.sh  test_all_models.py  test_models.py
src/: lib.rs
src/ai/: bridge.rs  mod.rs  models.rs  types.rs
src/mcp/: mod.rs  protocol.rs  resources.rs  server.rs  tools.rs
