[package]
name = "cloudfree"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Jade"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cfg-if = "1.0"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "z"
lto = true
